--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>fbab</groupId>
     <artifactId>fbab_hachathon2018</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Java Maven-based project analyzed on SonarCloud using Travis</name>
+    <name>Java Maven-based project analyzed on SonarCloud using Travis-CI.org</name>
     <url>https://github.com/SonarSource/sq-com_example_java-maven-travis</url>
 
     <scm>
