--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         </dependency>
     </dependencies>
     
+  <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -51,5 +52,5 @@
       </plugin>
     </plugins>
     
-    
+  </build>  
 </project>
