--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
             <configuration>
               <rules>
                 <requireFilesExist>
-                  <level>WARN</level> <!-- source : http://maven.apache.org/enforcer/maven-enforcer-plugin/usage.html -->
+                  <level>ERROR</level> <!-- source : http://maven.apache.org/enforcer/maven-enforcer-plugin/usage.html : WARN, ERROR -->
                   <files>
                    <file>${project.basedir}/pom.xml</file>
                    <file>${project.basedir}/docs/cdc.md</file>
