--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,9 @@ jdk:
 
 script:
   # JaCoCo is used to have code coverage, the agent has to be activated
-  # - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -l output.log
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar > target/output.log
+  # KO - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -l output.log
+  # KO - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar > target/output.log
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar > output.log
   # - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.login=${SONAR_TOKEN}
 
 cache:
