--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,12 @@ jdk:
   - oraclejdk8
 
 script:
+  # if language: java by default mvn test is launched (https://blog.travis-ci.com/2017-03-30-deploy-maven-travis-ci-packagecloud/)
   # JaCoCo is used to have code coverage, the agent has to be activated
   # KO - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -l output.log
   # KO - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar > target/output.log
   # KO - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar > output.log
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+  #- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
   # - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.login=${SONAR_TOKEN}
 
 cache:
