--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
     <url>https://github.com/SonarSource/sq-com_example_java-maven-travis</url>
 
     
- 
+ <!--
     <scm>
         <connection>scm:git:git@github.com:SonarSource/sq-com_example_java-maven-travis.git</connection>
         <developerConnection>scm:git:git@github.com:SonarSource/sq-com_example_java-maven-travis.git</developerConnection>
         <url>https://github.com/SonarSource/sq-com_example_java-maven-travis</url>
     </scm>
-
+-->
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -52,6 +52,25 @@
           </execution>
         </executions>
       </plugin>
+        
+     <!-- generate the site on gh-pages -->
+     <plugin>
+      <groupId>com.github.github</groupId>
+      <artifactId>site-maven-plugin</artifactId>
+      <version>0.12</version>
+      <configuration>
+        <message>Creating site for ${project.version}</message>
+      </configuration>
+      <executions>
+        <execution>
+          <goals>
+            <goal>site</goal>
+          </goals>
+          <phase>site</phase>
+        </execution>
+      </executions>
+    </plugin>
+        
     </plugins>
     
   </build>  
