--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ jdk:
   - oraclejdk8
 
 # script:
+  - mvn site
   # if language: java by default mvn test is launched (https://blog.travis-ci.com/2017-03-30-deploy-maven-travis-ci-packagecloud/)
   # JaCoCo is used to have code coverage, the agent has to be activated
   # KO - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -l output.log
