--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ addons:
 jdk:
   - oraclejdk8
 
-# script:
+script:
   - mvn site
   # if language: java by default mvn test is launched (https://blog.travis-ci.com/2017-03-30-deploy-maven-travis-ci-packagecloud/)
   # JaCoCo is used to have code coverage, the agent has to be activated
