--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ before_script:
   # sources
   #  - https://github.com/github/maven-plugins
   #  - https://github.com/wisdom-framework/wisdom-ractivejs/blob/master/.travis.yml
-  - echo "<settings><servers><server><id>github</id><username>\${env.GITHUB_USER}</username><password>\${env.GITHUB_PASS}</password></server></servers></settings>"
-  > ~/settings.xml
+  - echo "<settings><servers><server><id>github</id><username>\${env.GITHUB_USER}</username><password>\${env.GITHUB_PASS}</password></server></servers></settings>" > ~/settings.xml
   # opt on mvn command line in script could fails ?! 
   - echo "MAVEN_OPTS='-Dorg.apache.maven.user-settings=~/settings.xml'" > ~/.mavenrc
 
