--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,12 @@ before_script:
   #  - https://github.com/wisdom-framework/wisdom-ractivejs/blob/master/.travis.yml
   - echo "<settings><servers><server><id>github</id><username>\${env.GITHUB_USER}</username><password>\${env.GITHUB_PASS}</password></server></servers></settings>" > ~/settings.xml
   # opt on mvn command line in script could fails ?! 
-  - echo "MAVEN_OPTS='-Dorg.apache.maven.user-settings=~/settings.xml'" > ~/.mavenrc
+  # TO BE CHECKED : - echo "MAVEN_OPTS='-Dorg.apache.maven.user-settings=~/settings.xml'" > ~/.mavenrc
 
 script:
   # to generate the site with the settings above
-  - mvn site
-  # KO - mvn -s ~/settings.xml site
+  # OK - mvn site
+  - mvn -s ~/settings.xml site
   # if language: java by default 'mvn test -B' is launched (https://blog.travis-ci.com/2017-03-30-deploy-maven-travis-ci-packagecloud/)
   # JaCoCo is used to have code coverage, the agent has to be activated
   # KO - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -l output.log
