--- a/pom.xml
+++ b/pom.xml
@@ -67,12 +67,14 @@
             <goal>site</goal>
           </goals>
           <phase>site</phase>
+           <configuration>
                 <!-- indication from : https://github.github.com/maven-plugins/site-plugin/authentication.html -->
                 <server>github</server>
                 <!-- The commit message -->
                 <message>Building site for my project</message>
                 <!-- The location where the site is uploaded -->
                 <path>${site.path}</path>
+           </configuration>
         </execution>
       </executions>
     </plugin>
