--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,9 @@ script:
   # OK - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
   # OK - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.login=${SONAR_TOKEN}
 
+  # Invalid request. nil is not a string. (422)
+  # => https://github.com/github/maven-plugins/issues/85
+
 cache:
   directories:
     - '$HOME/.m2/repository'
