--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>fbab</groupId>
     <artifactId>fbab_hachathon2018</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>... Java Maven-based project analyzed on SonarCloud using Travis-CI.org pour compiler ...</name>
+    <name>... MiniP Maven-based documentation generation avec Travis-CI.org ...</name>
     <url>https://github.com/SonarSource/sq-com_example_java-maven-travis</url>
 
     
