--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_script:
   # - npm install -g gulp-cli
   - npm install textlint --global
   - npm install --global textlint-rule-no-todo
+  - npm install --global textlint-rule-very-nice-rule
 
 # install:
   # BY DEFAULT : - npm install
