--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_script:
   - npm install textlint --global
   - npm install --global textlint-rule-no-todo
   - npm install --global textlint-rule-no-dead-link
+  - npm install --global textlint-rule-no-empty-section
 
 # install:
   # BY DEFAULT : - npm install
@@ -37,7 +38,7 @@ before_script:
 
 script:
   # TO DO - gulp
-  - textlint --rule no-todo --rule no-dead-link "src/site/markdown/**"
+  - textlint --rule no-todo --rule no-dead-link --rule no-empty-section "src/site/markdown/**"
   # to generate the site with the settings above
   # OK - mvn site
   # - mvn -s ~/settings.xml site
