--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ node_js:
 
 before_script:
   # - npm install -g gulp-cli
+  - echo $TRAVIS_JOB_ID
   - npm install textlint --global
   - npm install --global textlint-rule-no-todo
   - npm install --global textlint-rule-no-dead-link
@@ -38,7 +39,7 @@ before_script:
 
 script:
   # TO DO - gulp
-  - textlint --rule no-todo --rule no-dead-link --rule no-empty-section "src/site/markdown/**"
+  - textlint --rule no-todo --rule no-dead-link --rule no-empty-section "src/site/markdown/**" > ~/textlint.log
   # to generate the site with the settings above
   # OK - mvn site
   # - mvn -s ~/settings.xml site
