--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,10 @@ node_js:
 before_script:
   # - npm install -g gulp-cli
   # https://github.com/travis-ci/travis-ci/issues/8376 : echo env var.
-  - echo "TRAVIS_JOB_ID=$TRAVIS_JOB_ID"
-  - echo "TRAVIS_BUILD_DIR=$TRAVIS_BUILD_DIR"
-  - set | grep TRAVIS
+  # - echo "TRAVIS_JOB_ID=$TRAVIS_JOB_ID"
+  # - echo "TRAVIS_BUILD_DIR=$TRAVIS_BUILD_DIR"
+  # le log est accessible à l'URL suivante : https://api.travis-ci.org/v3/job/$TRAVIS_JOB_ID/log.txt
+  - set | grep TRAVIS_JOB_ID
   - npm install textlint --global
   - npm install --global textlint-rule-no-todo
   - npm install --global textlint-rule-no-dead-link
