--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ before_script:
   # - echo "TRAVIS_BUILD_DIR=$TRAVIS_BUILD_DIR"
   # le log est accessible à l'URL suivante : https://api.travis-ci.org/v3/job/$TRAVIS_JOB_ID/log.txt
   - set | grep TRAVIS_JOB_ID
+  - mkdir ~/src/site/apt
   - npm install textlint --global
   - npm install --global textlint-rule-no-todo
   - npm install --global textlint-rule-no-dead-link
@@ -43,8 +44,8 @@ before_script:
 
 script:
   # TO DO - gulp
-  - textlint --rule no-todo --rule no-dead-link --rule no-empty-section "src/site/markdown/**" > ~/textlint.log
-  - cat ~/textlint.log
+  - textlint --rule no-todo --rule no-dead-link --rule no-empty-section "src/site/markdown/**" > ~/src/site/apt/textlint.apt
+  - cat ~/src/site/apt/textlint.log
   # to generate the site with the settings above
   # OK - mvn site
   - mvn -s ~/settings.xml site
