--- a/.travis.yml
+++ b/.travis.yml
@@ -47,8 +47,8 @@ script:
   - mvn validate
   # TO DO - gulp
   - ls -la ~/src/site/markdown
-  - textlint --rule no-todo --rule no-dead-link --rule no-empty-section "src/site/markdown/**" > ~/src/site/markdown/textlint.apt
-  - cat ~/src/site/apt/textlint.log
+  - textlint --rule no-todo --rule no-dead-link --rule no-empty-section "src/site/markdown/**" > ~/src/site/markdown/textlint.md
+  - cat ~/src/site/apt/textlint.md
   # to generate the site with the settings above
   # OK - mvn site
   - mvn -s ~/settings.xml site
