--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ script:
   # - textlint --rule no-todo --rule no-dead-link --rule no-empty-section "$TRAVIS_BUILD_DIR/src/site/markdown/**" >> $TRAVIS_BUILD_DIR/src/site/apt/textlint.apt
   - textlint --rule no-todo --rule no-dead-link --rule no-empty-section "src/site/markdown/**" >> $TRAVIS_BUILD_DIR/src/site/apt/textlint.apt
   # - echo "\`\`\`" >> $TRAVIS_BUILD_DIR/src/site/markdown/textlint.md
-  - echo "+---------------------" > $TRAVIS_BUILD_DIR/src/site/apt/textlint.apt
+  - echo "+---------------------" >> $TRAVIS_BUILD_DIR/src/site/apt/textlint.apt
   - cat $TRAVIS_BUILD_DIR/src/site/apt/textlint.apt
   - echo "[TRAVIS JOB LOG"$TRAVIS_JOB_ID"](https://api.travis-ci.org/v3/job/"$TRAVIS_JOB_ID"/log.txt)"
   - echo "[TRAVIS JOB LOG"$TRAVIS_JOB_ID"](https://api.travis-ci.org/v3/job/"$TRAVIS_JOB_ID"/log.txt)" > $TRAVIS_BUILD_DIR/src/site/markdown/travislog.md
