--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@
 sudo: false
 install: true
 
-# addons:
+addons:
+  apt:
+    packages:
+      - graphviz
   # sonarcloud:
     # organization: "fbab-github"
     # RAPPEL : token et organisation sont au même niveau.
